# foggy

./: .gitignore  CMakeLists.txt  Computer Graphics Project Report.docx  report.md
CG Project Prototype/: CG Project Prototype.sln
CG Project Prototype/CG Project Prototype/: CG Project Prototype.vcxproj  CG Project Prototype.vcxproj.filters
CG Project Prototype/CG Project Prototype/res/models/: Earth.mtl  bulb.mtl  myCube.mtl
CG Project Prototype/CG Project Prototype/res/shaders/: bulb.frag  bulb.vert  lighting.frag  lighting.vert
CG Project Prototype/CG Project Prototype/src/: Camera.cpp  Camera.h  Celestial.cpp  Celestial.h  Game.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h  blinnPhongShading.cpp
CG Project Prototype/CG Project Prototype/x64/Debug/: CG Project Prototype.exe.recipe  vc143.idb
CG Project Prototype/Project etc/: Project etc.vcxproj  Project etc.vcxproj.filters
CG Project Prototype/Project etc/res/shaders/: transform.frag  transform.vert
CG Project Prototype/Project etc/src/: Texture.cpp  main.cpp
CG Project Prototype/Project etc/src/rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
CG Project Prototype/Project etc/x64/Debug/: Project etc.exe.recipe  vc143.idb
assets/shaders/: grass.geom  skybox.frag  transform.frag  transform.vert
src/: main.cpp
src/rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
(+15 files in other folders)
